--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     },
     "scripts": {
         "test": "echo no tests..."
+    },
+    "dependencies": {
+        "axios": "^1.8.3",
+        "cheerio": "^1.0.0",
+        "emojipedia": "^0.4.0",
+        "node-emoji": "^2.2.0"
     }
 }
